--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -29,7 +29,7 @@ body {
 }
 
 .card-grid {
-  padding: 0px 40px;
+  padding: 50px 40px;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
@@ -66,8 +66,8 @@ body {
 
 .mid {
   overflow: hidden;
-  height: 400px;
-  background-image: url(../assets/mid-bg4.png);
+  height: 320px;
+  background-image: url(../assets/bg3.png);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -75,6 +75,7 @@ body {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  background-color: white;
 }
 .mid > h2 {
   font-size: 62pt;
