--- a/src/styles/card.css
+++ b/src/styles/card.css
@@ -1,7 +1,7 @@
 .Card {
     height: 250px;
     width: 250px;
-    background-color: rgb(187, 72, 0);
+    background-color: #0b012e;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,6 +11,11 @@
     margin: 30px 30px;
     transition: 0.2s ease;
     box-shadow: 0px 0px 7px 7px rgba(0, 0, 0, 0.459);
+    /* background-image: url(../assets/card-bg.png); */
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    background-blend-mode: hard-light;
   }
   .Card > h1 {
     color: beige;
@@ -25,6 +30,7 @@
   .Card > p {
     color: beige;
     margin: 0px 10px;
+    font-weight: 600;
     font-family: "Libre Franklin", serif;
   }
   .Card:hover {
