--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -102,7 +102,7 @@ h3 {
   z-index: 1;
   position: relative;
   text-align: center;
-  padding: 20px 0px;
+  padding-top: 20px;
   font-style: italic;
 }
 
