--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -66,7 +66,7 @@ body {
 
 .mid {
   overflow: hidden;
-  height: 320px;
+  height: 300px;
   background-image: url(../assets/bg3.png);
   background-position: center;
   background-repeat: no-repeat;
@@ -102,7 +102,7 @@ h3 {
   z-index: 1;
   position: relative;
   text-align: center;
-  padding-top: 20px;
+  padding: 10px 0px 60px 0px;
   font-style: italic;
 }
 
